# lang-vot-x-ext-kkankain

./: .gitignore  .gitmodules  .glottologid.txt  CITATION.cff  Links.md  Makefile.am  Makefile.in  README  README.markdown  README.md  _config.yml  autogen.sh  configure.ac  giella-vot.pc.in  index-header.md  index.md  language-map.md  manifest.toml  manifest.toml.in  src-cg3-functions.cg3.md  src-fst-affixes-symbols.lexc.md  src-fst-ext-github_kristiank-data-giellatekno-morphology-affixes-nouns.lexc.md  src-fst-ext-github_kristiank-data-giellatekno-morphology-root.lexc.md  src-fst-ext-github_kristiank-data-giellatekno-morphology-stems-nouns.lexc.md  src-fst-morphology-affixes-symbols.lexc.md  src-fst-morphology-ext-github_kristiank-data-giellatekno-morphology-affixes-nouns.lexc.md  src-fst-morphology-ext-github_kristiank-data-giellatekno-morphology-root.lexc.md  src-fst-morphology-ext-github_kristiank-data-giellatekno-morphology-stems-nouns.lexc.md  src-fst-phonetics-txt2ipa.xfscript.md  src-fst-transcriptions-transcriptor-abbrevs2text.lexc.md  src-fst-transcriptions-transcriptor-numbers-digit2text.lexc.md  src-fst-transcriptions-transcriptor-symbols2text.lexc.md  src-phonetics-txt2ipa.xfscript.md  src-transcriptions-transcriptor-abbrevs2text.lexc.md  src-transcriptions-transcriptor-numbers-digit2text.lexc.md  tools-grammarcheckers-grammarchecker.cg3.md  tools-tokenisers-tokeniser-disamb-gt-desc.pmscript.md  tools-tokenisers-tokeniser-gramcheck-gt-desc.pmscript.md  tools-tokenisers-tokeniser-tts-cggt-desc.pmscript.md  transcriptor-abbrevs2text.md  (+1 more)
src/: Makefile.am
(+356 files in other folders)
